[package]
name = "glyph"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
bevy_egui = "0.39"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

# Fast dev compiles
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
